--- a/draft-02.html
+++ b/draft-02.html
@@ -402,7 +402,7 @@
 
   <meta name="dct.creator" content="Amundsen, M., Richardson, L., and M. Foster" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-amundsen-richardson-foster-alps-02" />
-  <meta name="dct.issued" scheme="ISO8601" content="2015-3-10" />
+  <meta name="dct.issued" scheme="ISO8601" content="2015-3-12" />
   <meta name="dct.abstract" content="This document describes ALPS, a data format for defining simple descriptions of application-level semantics, similar in complexity to HTML microformats. An ALPS document can be used as a profile to explain the application semantics of a document with an application-agnostic media type (such as HTML, HAL, Collection+JSON, Siren, etc.). This increases the reusability of profile documents across media types.  " />
   <meta name="description" content="This document describes ALPS, a data format for defining simple descriptions of application-level semantics, similar in complexity to HTML microformats. An ALPS document can be used as a profile to explain the application semantics of a document with an application-agnostic media type (such as HTML, HAL, Collection+JSON, Siren, etc.). This increases the reusability of profile documents across media types.  " />
 
@@ -422,7 +422,7 @@
   <td class="right">CA Technologies, Inc.</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 11, 2015</td>
+  <td class="left">Expires: September 13, 2015</td>
   <td class="right">L. Richardson</td>
 </tr>
 <tr>
@@ -439,7 +439,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">March 10, 2015</td>
+  <td class="right">March 12, 2015</td>
 </tr>
 
     	
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 11, 2015.</p>
+<p>This Internet-Draft will expire on September 13, 2015.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1121,6 +1121,8 @@
   <dd style="margin-left: 8">This format shares security issues common to all XML content types. It does not provide executable content.  Information contained in ALPS documents do not require privacy or integrity services.  </dd>
   <dt>Interoperability considerations:</dt>
   <dd style="margin-left: 8">ALPS is not described by a DTD and applies only the well-formedness rules of XML. It should only be parsed by a non-validating parser.  </dd>
+  <dt>Fragment identifier considerations:</dt>
+  <dd style="margin-left: 8">Fragment identifiers used with application/alps+xml resources are simple, opaque strings that match the <a href="#prop-id">'id'</a> in an existing <a href="#prop-descriptor">'descriptor'</a> in the document. For example, the fragment identifier "#user" refers to a descriptor in the document with an id value set to "user." </dd>
   <dt>Published specification:</dt>
   <dd style="margin-left: 8">This Document </dd>
   <dt>Applications that use this media type:</dt>
@@ -1180,6 +1182,8 @@
   <dd style="margin-left: 8">This media type shares security issues common to all JSON content types. See <a href="#RFC4627">[RFC4627]</a> Section #6 for additional information. ALPS+JSON does not provide executable content. Information contained in ALPS+JSON documents do not require privacy or integrity services.  </dd>
   <dt>Interoperability considerations:</dt>
   <dd style="margin-left: 8">None </dd>
+  <dt>Fragment identifier considerations:</dt>
+  <dd style="margin-left: 8">Fragment identifiers used with application/alps+json resources are simple, opaque strings that match the <a href="#prop-id">'id'</a> in an existing <a href="#prop-descriptor">'descriptor'</a> in the document. For example, the fragment identifier "#user" refers to a descriptor in the document with an id value set to "user." </dd>
   <dt>Published specification:</dt>
   <dd style="margin-left: 8">This Document </dd>
   <dt>Applications that use this media type:</dt>
